make field required to prevent empty string

--- a/CreateUser.html
+++ b/CreateUser.html
@@ -5,7 +5,7 @@
     <body>
         <form action="CreateUser.php" method="post" target="alert">
             <h1>Enter Username</h1>
-            <input type="text" name="user_id"/>
+            <input type="text" name="user_id" required/>
             <input type="submit" value="Submit"/>
         </form>
         <iframe name="alert" height="0" width="0" style="border:none;"/>
