--- a/CreatePosts.html
+++ b/CreatePosts.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Create User</title>
+        <title>Create Posts</title>
     </head>
     <body>
         <form action="CreatePosts.php" method="post" target="alert">
