fix page refresh after delete

--- a/DeletePost.html
+++ b/DeletePost.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Delete Post</h1>
-        <form action="DeletePost.php" method="post" target="alert">
+        <form action="DeletePost.php" method="post" target="alert" id="form">
             <table>
                 <tr>
                     <th>Author</th>
@@ -34,7 +34,6 @@
             </table><br>
             <input type="submit" name="submit" value="Submit"/>
         </form>
-        <iframe name="alert" height="1000" width="1000"/>
-
+        <iframe name="alert" height="0" width="0" style="border:none;"/>
     </body>
 </html>
